--- a/src/main/webapp/resources/css/detalhes.css
+++ b/src/main/webapp/resources/css/detalhes.css
@@ -1497,7 +1497,7 @@ a.urunthumbnail.active {
   margin-left: 20px; }
 
 .add-to-cart, .like {
-  background: purple;
+  background: #4287f5;
   padding: 1.2em 1.5em;
   border: none;
   text-transform: UPPERCASE;
@@ -1506,7 +1506,7 @@ a.urunthumbnail.active {
   -webkit-transition: background .3s ease;
   transition: background .3s ease; }
 .add-to-cart:hover, .like:hover {
-  background: #7B2A80;
+  background: #426cf5;
   color: #fff; }
 
 .not-available {
