--- a/src/main/resources/relatorios/comprovante.jrxml
+++ b/src/main/resources/relatorios/comprovante.jrxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.10.0.final using JasperReports Library version 6.10.0-unknown  -->
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Comprovante" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1cfd6284-6591-44ab-be38-af186b149f4f">
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="viagem" class="br.com.trips.model.Viagem"/>
 	<parameter name="usuario" class="br.com.trips.model.Usuario"/>
-	<parameter name="qrcode" class="java.lang.String"/>
+	<parameter name="qrcode" class="java.awt.image.BufferedImage">
+		<defaultValueExpression><![CDATA[$P{qrcode}]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -100,10 +103,10 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="209" splitType="Stretch">
-			<image scaleImage="FillFrame" onErrorType="Blank">
-				<reportElement x="167" y="0" width="250" height="250" backcolor="#333333" uuid="69040a0b-eb26-4099-bea9-2e1defa9ee72"/>
-				<imageExpression><![CDATA[javax.imageio.ImageIO.read(new java.io.ByteArrayInputStream($P{qrcode}))]]></imageExpression>
+		<band height="260" splitType="Stretch">
+			<image>
+				<reportElement x="267" y="141" width="50" height="50" uuid="242fee9c-e728-494c-b203-9b24f08d446c"/>
+				<imageExpression><![CDATA[$P{qrcode}]]></imageExpression>
 			</image>
 		</band>
 	</detail>
