--- a/src/main/resources/relatorios/Blank_A4.jrxml
+++ b/src/main/resources/relatorios/Blank_A4.jrxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
+<!-- Created with Jaspersoft Studio version 6.10.0.final using JasperReports Library version 6.10.0-unknown  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7ce1a866-b5af-4e94-9cf4-23c3b84713bd">
+	<parameter name="viagem" class="br.com.trips.model.Viagem"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -10,37 +11,57 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch"/>
+		<band height="79" splitType="Stretch">
+			<staticText>
+				<reportElement x="380" y="0" width="170" height="40" uuid="77a35e59-996c-4fe8-b35f-04eb66821230"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="16" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Lista de passageiros]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="0" width="230" height="60" uuid="28d8c058-98db-4e4a-a1da-84b16e7cc9b8"/>
+				<textElement textAlignment="Center">
+					<font fontName="Corbel" size="25" isBold="true"/>
+				</textElement>
+				<text><![CDATA[SISTEMA TRIPS]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="380" y="40" width="170" height="30" uuid="154d52ef-8694-4c02-92ee-70f3e2455f01"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$P{viagem}.getTitulo()]]></textFieldExpression>
+			</textField>
+		</band>
 	</title>
 	<pageHeader>
 		<band height="35" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="35" splitType="Stretch">
 			<staticText>
-				<reportElement x="83" y="0" width="100" height="30" uuid="03c0843d-5149-4d1d-856b-7816cc276386">
+				<reportElement x="83" y="0" width="197" height="30" uuid="03c0843d-5149-4d1d-856b-7816cc276386">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c473905c-17e8-4159-86ca-f372c4f4ee46"/>
 				</reportElement>
-				<text><![CDATA[nome]]></text>
+				<text><![CDATA[Nome completo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="240" y="0" width="100" height="30" uuid="bac40355-d90a-40ac-8d53-33663eedf477">
+				<reportElement x="330" y="0" width="100" height="30" uuid="bac40355-d90a-40ac-8d53-33663eedf477">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c3fd2c33-900c-46c5-a72b-e2502ec7fbc0"/>
 				</reportElement>
-				<text><![CDATA[rg]]></text>
+				<text><![CDATA[Numero Identidade]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="45" splitType="Stretch">
 			<textField>
-				<reportElement x="30" y="15" width="100" height="30" uuid="374001cd-173e-422d-93b0-4e2410eb0f22">
+				<reportElement x="83" y="10" width="197" height="20" uuid="374001cd-173e-422d-93b0-4e2410eb0f22">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c473905c-17e8-4159-86ca-f372c4f4ee46"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="180" y="10" width="100" height="30" uuid="53fffac6-72b0-48c2-be86-78da0d7b9e2d">
+				<reportElement x="330" y="11" width="100" height="19" uuid="53fffac6-72b0-48c2-be86-78da0d7b9e2d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c3fd2c33-900c-46c5-a72b-e2502ec7fbc0"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{rg}]]></textFieldExpression>
